Updated styles, fixed layout bug for mobile and added pdf of CV.

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -55,6 +55,5 @@
   }
 
   &--title {
-	padding-right: 80px;
   }
 }
