--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -78,8 +78,8 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 36px;
-  height: 36px;
+  width: 0px;
+  height: 0px;
 
   @include breakpoint($large) {
     display: block;
